--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prop-types": "15.8.1",
     "react": "~17.0.2",
     "react-dom": "~17.0.2",
+    "react-ga4": "^2.1.0",
     "react-json-to-csv": "~1.0.4",
     "react-leaflet": "2.7.0",
     "react-leaflet-draw": "0.19.0",
