--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nivo/core": "~0.79.0",
     "@nivo/line": "~0.79.1",
     "@nivo/pie": "~0.79.1",
+    "@nivo/scales": "^0.84.0",
     "@nivo/scatterplot": "^0.84.0",
     "@nivo/tooltip": "~0.79.0",
     "@vx/responsive": "~0.0.199",
