--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
     "@types/react-leaflet": "^2.8.2",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
-    "typescript": "~4.7.3",
-    "yarn-audit-fix": "~10.0.7"
+    "typescript": "~4.7.3"
   },
   "browserslist": [
     ">0.2%",
