--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "biotablero",
   "version": "2.0.3",
+  "packageManager": "pnpm@8.15.1",
   "scripts": {
-    "start": "PORT=8080 npx serve -s build",
+    "start": "PORT=8080 serve -s build",
     "start-dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
@@ -25,9 +26,9 @@
     "@nivo/tooltip": "~0.79.0",
     "@vx/responsive": "~0.0.199",
     "axios": "~1.6.5",
-    "cbm-dashboard": "1.0.0",
+    "cbm-dashboard": "workspace:1.0.0",
     "chart.js": "~3.8.0",
-    "indicators": "1.0.0",
+    "indicators": "workspace:1.0.0",
     "leaflet": "1.4.0",
     "leaflet-draw": "^1.0.4",
     "prettier": "^2.7.1",
@@ -40,13 +41,15 @@
     "react-leaflet-draw": "0.19.0",
     "react-router-dom": "5.3.3",
     "react-scripts": "~5.0.1",
-    "react-spring": "~9.4.5",
     "serve": "^14.2.1",
     "styled-components": "~5.3.11"
   },
   "dependenciesMeta": {
-    "@react-spring/core": {
-      "built": false
+    "cbm-dashboard": {
+      "injected": true
+    },
+    "indicators": {
+      "injected": true
     },
     "parcel": {
       "built": false
@@ -69,8 +72,13 @@
     "not op_mini all"
   ],
   "private": true,
-  "workspaces": [
-    "packages/cbm-dashboard",
-    "packages/indicators"
-  ]
+  "engines": {
+    "node": ">=18.15",
+    "pnpm": ">=8.15"
+  },
+  "pnpm": {
+    "requiredScripts": [
+      "build-pkg"
+    ]
+  }
 }
