--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "~5.8.3",
     "@mui/material": "~5.8.3",
     "@mui/styles": "~5.8.3",
+    "@nivo/axes": "~0.79.0",
     "@nivo/bar": "~0.79.1",
     "@nivo/bullet": "~0.79.1",
     "@nivo/core": "~0.79.0",
@@ -24,6 +25,7 @@
     "@nivo/scales": "^0.84.0",
     "@nivo/scatterplot": "^0.84.0",
     "@nivo/tooltip": "~0.79.0",
+    "@react-spring/web": "~9.3.1",
     "@vx/responsive": "~0.0.199",
     "axios": "~1.6.5",
     "cbm-dashboard": "workspace:1.0.0",
@@ -56,6 +58,8 @@
     }
   },
   "devDependencies": {
+    "@types/geojson": "^7946.0.14",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^17.0.41",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
