--- a/package.json
+++ b/package.json
@@ -83,6 +83,20 @@
   "pnpm": {
     "requiredScripts": [
       "build-pkg"
-    ]
+    ],
+    "overrides": {
+      "node-forge@<1.0.0": ">=1.0.0",
+      "node-forge@<0.10.0": ">=0.10.0",
+      "d3-color@<3.1.0": ">=3.1.0",
+      "node-forge@<1.3.0": ">=1.3.0",
+      "jsdom@<=16.4.0": ">=16.5.0",
+      "postcss@>=7.0.0 <7.0.36": ">=7.0.36",
+      "terser@<4.8.1": ">=4.8.1",
+      "postcss@<7.0.36": ">=7.0.36",
+      "postcss@<8.4.31": ">=8.4.31",
+      "glob-parent@<5.1.2": ">=5.1.2",
+      "tough-cookie@<4.1.3": ">=4.1.3",
+      "nth-check@<2.0.1": ">=2.0.1"
+    }
   }
 }
