--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@types/react-leaflet": "^2.8.2",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
-    "prettier": "^2.7.1",
+    "prettier": "2.7.1",
     "typescript": "~4.7.3"
   },
   "browserslist": [
