--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -8,6 +8,6 @@ on:
 
 jobs:
   call-deploy:
-    uses: .github/workflows/deploy_dev_stg.yml
+    uses: ./.github/workflows/deploy_dev_stg.yml
     with:
       app_env: develop
