--- a/.github/workflows/check_format.yml
+++ b/.github/workflows/check_format.yml
@@ -12,6 +12,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - uses: pnpm/action-setup@v3
     - name: Use Node.js
       uses: actions/setup-node@v4
       with:
