--- a/.github/workflows/deploy_dev_stg.yml
+++ b/.github/workflows/deploy_dev_stg.yml
@@ -23,7 +23,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
+      - uses: pnpm/action-setup@v3
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
