--- a/.github/workflows/deploy_dev_stg.yml
+++ b/.github/workflows/deploy_dev_stg.yml
@@ -6,10 +6,14 @@ on:
       app_env:
         required: true
         type: string
-
+    secrets:
+      BACKEND_KEY:
+        required: true
+      AZURE_WEBAPP_PUBLISH_PROFILE:
+        required: true
 env:
   AZURE_WEBAPP_NAME: biotablero-frontend
-  REACT_APP_ENVIRONMENT:  ${{ inputs.config-app_env }}
+  REACT_APP_ENVIRONMENT:  ${{ inputs.app_env }}
   REACT_APP_BACKEND_BIAB_URL: ${{ vars.BACKEND_BIAB_URL }}
   REACT_APP_BACKEND_URL: ${{ vars.BACKEND_URL }}
   REACT_APP_BACKEND_KEY: ${{ secrets.BACKEND_KEY }}
