--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.3",
   "packageManager": "pnpm@8.15.1",
   "scripts": {
-    "start": "PORT=8080 serve -s build",
+    "start": "PORT=5000 serve -s build",
     "start-dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
@@ -42,7 +42,7 @@
     "react-leaflet-draw": "0.19.0",
     "react-router-dom": "5.3.3",
     "react-scripts": "~5.0.1",
-    "serve": "^14.2.1",
+    "serve": "~13.0.0",
     "styled-components": "~5.3.11"
   },
   "dependenciesMeta": {
