--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "react-dom": "~17.0.2",
     "react-ga4": "^2.1.0",
     "react-json-to-csv": "~1.0.4",
-    "react-leaflet": "2.7.0",
-    "react-leaflet-draw": "0.19.0",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-draw": "^0.20.6",
     "react-router-dom": "5.3.3",
     "react-scripts": "~5.0.1",
     "serve": "~13.0.0",
