--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-router-dom": "5.3.3",
     "react-scripts": "~5.0.1",
     "serve": "~13.0.0",
-    "styled-components": "~5.3.11"
+    "styled-components": "~5.3.11",
+    "@appigram/react-yandex-metrika": "^2.8.9"
   },
   "dependenciesMeta": {
     "cbm-dashboard": {
