--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react-leaflet-draw": "^0.20.6",
     "react-router-dom": "5.3.3",
     "react-scripts": "~5.0.1",
+    "react-slick": "^0.30.3",
     "serve": "~13.0.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "~5.3.11",
     "@appigram/react-yandex-metrika": "^2.8.9"
   },
