--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "cbm-dashboard": "workspace:1.0.0",
     "chart.js": "~3.8.0",
     "indicators": "workspace:1.0.0",
-    "leaflet": "1.4.0",
+    "leaflet": "1.9.4",
     "leaflet-draw": "^1.0.4",
     "prop-types": "15.8.1",
     "react": "~17.0.2",
@@ -58,12 +58,12 @@
   },
   "devDependencies": {
     "@types/geojson": "^7946.0.14",
-    "@types/leaflet": "^1.9.8",
+    "@types/leaflet": "^1.9.16",
+    "@types/leaflet-draw": "^1.0.11",
     "@types/node": "^17.0.41",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@types/react-json-to-csv": "^1.0.0",
-    "@types/react-leaflet": "^2.8.2",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "prettier": "2.7.1",
