--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "biotablero",
-  "version": "2.1.3",
+  "version": "2.1.0",
   "packageManager": "pnpm@8.15.1",
   "scripts": {
     "start": "PORT=5000 serve -s build",
@@ -43,8 +43,7 @@
     "react-router-dom": "5.3.3",
     "react-scripts": "~5.0.1",
     "serve": "~13.0.0",
-    "styled-components": "~5.3.11",
-    "@appigram/react-yandex-metrika": "^2.8.9"
+    "styled-components": "~5.3.11"
   },
   "dependenciesMeta": {
     "cbm-dashboard": {
