--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "2.1.4",
   "packageManager": "pnpm@8.15.1",
   "scripts": {
-    "start": "PORT=5000 serve -s build",
-    "start-dev": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "preview": "vite preview",
+    "start": "vite preview --port 5000",
     "check-format": "prettier --check 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
@@ -38,12 +37,10 @@
     "react-dom": "~17.0.2",
     "react-ga4": "^2.1.0",
     "react-json-to-csv": "~1.0.4",
-    "react-leaflet": "^4.2.1",
-    "react-leaflet-draw": "^0.20.6",
+    "react-leaflet": "~3.2.5",
+    "react-leaflet-draw": "~0.19.8",
     "react-router-dom": "5.3.3",
-    "react-scripts": "~5.0.1",
     "react-slick": "^0.30.3",
-    "serve": "~13.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "~5.3.11",
     "@appigram/react-yandex-metrika": "^2.8.9"
@@ -54,30 +51,26 @@
     },
     "indicators": {
       "injected": true
-    },
-    "parcel": {
-      "built": false
     }
   },
   "devDependencies": {
     "@types/geojson": "^7946.0.14",
     "@types/leaflet": "^1.9.16",
     "@types/leaflet-draw": "^1.0.11",
-    "@types/node": "^17.0.41",
-    "@types/react": "^18.0.12",
-    "@types/react-dom": "^18.0.5",
+    "@types/react": "~17.0.87",
+    "@types/react-dom": "~17.0.26",
+    "@types/node": "~18.19.0",
     "@types/react-json-to-csv": "^1.0.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "prettier": "2.7.1",
-    "typescript": "~4.7.3"
+    "@vitejs/plugin-react": "~4.3.0",
+    "jsdom": "~22.1.0",
+    "typescript": "~5.4.0",
+    "vite": "~5.2.12",
+    "vite-plugin-svgr": "~4.2.0",
+    "vite-tsconfig-paths": "~4.3.2"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
   "private": true,
   "engines": {
     "node": ">=18.15",
