--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,23 @@
 {
   "compilerOptions": {
-    "module": "esnext",
-    "sourceMap": true,
+    "module": "ESNext",
+    "target": "ESNext",
     "jsx": "react-jsx",
-    "target": "es5",
-    "downlevelIteration": true,
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "allowImportingTsExtensions": true,
+    "esModuleInterop": true,
+    "types": ["vite/client", "vite-plugin-svgr/client"],
     "baseUrl": "src"
   },
-  "exclude": [
-    "node_modules",
-    "static",
-    "build",
-    "packages/**/node_modules"
-  ],
-  "include": [
-    "src"
-  ]
+  "exclude": ["static", "build", "dist", "node_modules"],
+  "include": ["src", "vite.config.ts"]
 }
