--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "start": "vite preview --port 3000",
-    "check-format": "prettier --check 'src/**/*.{ts,tsx}'"
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
+    "format:check": "prettier --check 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx}",
+    "lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix"
   },
   "dependencies": {
+    "@appigram/react-yandex-metrika": "^2.8.9",
     "@emotion/react": "~11.9.0",
     "@emotion/styled": "~11.8.1",
     "@mui/icons-material": "~5.8.3",
@@ -41,8 +45,7 @@
     "react-router-dom": "5.3.3",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
-    "styled-components": "~5.3.11",
-    "@appigram/react-yandex-metrika": "^2.8.9"
+    "styled-components": "~5.3.11"
   },
   "dependenciesMeta": {
     "cbm-dashboard": {
@@ -54,17 +57,28 @@
   },
   "devDependencies": {
     "@types/geojson": "^7946.0.14",
-    "@types/react": "~17.0.87",
-    "@types/react-dom": "~17.0.26",
-    "@types/node": "~18.19.0",
     "@types/leaflet": "~1.9.16",
     "@types/leaflet-draw": "~1.0.11",
+    "@types/node": "~18.19.0",
+    "@types/react": "~17.0.87",
+    "@types/react-dom": "~17.0.26",
     "@types/react-json-to-csv": "^1.0.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
-    "prettier": "2.7.1",
+    "@typescript-eslint/eslint-plugin": "^8.39.1",
+    "@typescript-eslint/parser": "^8.39.1",
     "@vitejs/plugin-react": "~4.3.0",
+    "eslint": "~8.57.1",
+    "eslint-config-airbnb": "~19.0.4",
+    "eslint-config-prettier": "~7.1.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "~4.2.5",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "~22.1.0",
+    "prettier": "2.7.1",
     "typescript": "~5.4.0",
     "vite": "~5.2.12",
     "vite-plugin-svgr": "~4.2.0",
