--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "preview": "vite preview",
     "start": "vite preview --port 3000",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
-    "format:check": "prettier --check 'src/**/*.{js,jsx,ts,tsx}'",
+    "check-format": "prettier --check 'src/**/*.{js,jsx,ts,tsx}'",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx}",
-    "lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix"
+    "fix-lint": "eslint src/**/*.{js,jsx,ts,tsx} --fix"
   },
   "dependencies": {
     "@appigram/react-yandex-metrika": "^2.8.9",
