--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "check-format": "prettier --check 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
+    "@appigram/react-yandex-metrika": "^2.8.9",
     "@emotion/react": "~11.9.0",
     "@emotion/styled": "~11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "~5.8.3",
     "@mui/material": "~5.8.3",
     "@mui/styles": "~5.8.3",
@@ -28,7 +31,8 @@
     "@vx/responsive": "~0.0.199",
     "axios": "~1.6.5",
     "chart.js": "~3.8.0",
-    "indicators": "workspace:1.0.0",
+    "firebase": "~9.8.4",
+    
     "leaflet": "1.9.4",
     "leaflet-draw": "^1.0.4",
     "prop-types": "15.8.1",
@@ -38,30 +42,26 @@
     "react-json-to-csv": "~1.0.4",
     "react-leaflet": "~3.2.5",
     "react-leaflet-draw": "~0.19.8",
+    "react-masonry-component": "~6.3.0",
     "react-router-dom": "5.3.3",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
-    "styled-components": "~5.3.11",
-    "@appigram/react-yandex-metrika": "^2.8.9"
+    "styled-components": "~5.3.11"
   },
-  "dependenciesMeta": {
-    "indicators": {
-      "injected": true
-    }
-  },
+  
   "devDependencies": {
     "@types/geojson": "^7946.0.14",
-    "@types/react": "~17.0.87",
-    "@types/react-dom": "~17.0.26",
-    "@types/node": "~18.19.0",
     "@types/leaflet": "~1.9.16",
     "@types/leaflet-draw": "~1.0.11",
+    "@types/node": "~18.19.0",
+    "@types/react": "~17.0.87",
+    "@types/react-dom": "~17.0.26",
     "@types/react-json-to-csv": "^1.0.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
-    "prettier": "2.7.1",
     "@vitejs/plugin-react": "~4.3.0",
     "jsdom": "~22.1.0",
+    "prettier": "2.7.1",
     "typescript": "~5.4.0",
     "vite": "~5.2.12",
     "vite-plugin-svgr": "~4.2.0",
